Fix white space in edit view

--- a/blocks/form-input-dropdown/src/editor.scss
+++ b/blocks/form-input-dropdown/src/editor.scss
@@ -13,8 +13,10 @@
 .wp-block-prc-block-form-input-dropdown:not(.is-active) {
 	// display: none;
 	visibility: hidden;
+	height: 30px;
 }
 
 .wp-block-prc-block-form-input-dropdown:not(.is-active) > :first-child {
+	// display: block;
 	visibility: visible;
 }
